tests/invalid/preproc_error.c
#define MSG Build stopped
#error MSG
int main() { return 0; }
